--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "@prisma/client": "^6.16.2",
     "@types/cors": "^2.8.19",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.58.9",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "slugify": "^1.6.6",
