--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
+    "dev:worker": "nodemon src/worker.ts",
     "test-server": "ts-node src/test.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,7 +16,7 @@
     "@prisma/client": "^6.16.2",
     "@types/cors": "^2.8.19",
     "bcryptjs": "^3.0.2",
-    "bullmq": "^5.58.9",
+    "bullmq": "^5.59.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
